Refactor APK installation logic and modernize utility components
This change relocates the APK installation logic to a more appropriate utility class, implements the automatic installation flow in the app updater, and modernizes core utilities using Java records and standardized charset references.

Key adjustments include:

*   **APK Installation & Manifest Updates:**
    *   Moved `openApkFile` from `ShareHelper` to `FileStorageUtility` to centralize storage-related operations.
    *   Added a `FileProvider` definition to `AndroidManifest.xml` to support secure sharing of the downloaded APK with the system installer.
*   **App Updater Enhancements:**
    *   **AppUpdaterActivity:** Implemented `handleDownloadComplete` to observe the `COMPLETED` state. It validates the downloaded file, dismisses the progress dialog, and triggers the installation process.
    *   Refactored `DownloadStatus` references for better clarity and updated error handling logic.
*   **Code Modernization & Refactoring:**
    *   **AppRawFiles:** Refactored the `ResourceMapping` static helper class into a Java `record`.
    *   **URLUtility:** Standardized query parameter encoding and decoding by replacing hardcoded "UTF-8" strings with the `UTF_8` constant.
    *   **FileStorageUtility:** Updated `readStringFromInternalStorage` to use `StandardCharsets` consistently and performed a project-wide indentation cleanup of the utility class.
*   **General Cleanup:** Standardized import blocks and improved exception logging for the installation flow.